k8s/production/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: stockalert
  labels:
    name: stockalert
