k8s/production/service.yml
apiVersion: v1
kind: Service
metadata:
  name: taskflow-backend-service
  namespace: production
spec:
  type: NodePort
  selector:
    app: taskflow-backend
  ports:
  - port: 3001
    targetPort: 3001
    nodePort: 30001
apiVersion: v1
kind: Service
metadata:
  name: taskflow-cache
  namespace: production
spec:
  type: ClusterIP # ClusterIP = non exposé à l'extérieur
  selector:
    app: taskflow-cache
  ports:
  - port: 6379
    targetPort: 6379
