k8s/production/deployment.yml
# ── Déploiement Backend Prod ──
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskflow-backend
  namespace: production
spec:
  replicas: 3 # Choix 4 : 3 replicas min en prod
  selector:
    matchLabels:
      app: taskflow-backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1 # Choix 3 : Prod (Zero downtime)
      maxUnavailable: 0 # Choix 3 : Prod (Zero downtime)
  template:
    metadata:
      labels:
        app: taskflow-backend
    spec:
      containers:
      - name: backend
        # Note : Le tag "latest" sera remplacé par le sed de ton GitHub Actions
        image: lucasgpro/taskflow-backend:latest
        ports:
        - containerPort: 3001
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 15
          periodSeconds: 10
---
# ── Déploiement Cache Prod ──
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskflow-cache
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskflow-cache
  template:
    metadata:
      labels:
        app: taskflow-cache
    spec:
      containers:
      - name: cache
        image: redis:7-alpine
        ports:
        - containerPort: 6379
---
# ── 🚀 AVANCÉ : Network Policy (Cache isolé) ──
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-cache
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: taskflow-cache
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: taskflow-backend
    ports:
    - protocol: TCP
      port: 6379
